--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -60,8 +60,8 @@ server {
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    ssl_certificate /etc/letsencrypt/live/mydomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mydomain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/MYDOMAIN.COM/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/MYDOMAIN.COM/privkey.pem;
     # ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
     # Add headers to serve security related headers
